fix: flex-wrap property

--- a/src/components/header/__user/_unsigned/header__user_unsigned.scss
+++ b/src/components/header/__user/_unsigned/header__user_unsigned.scss
@@ -18,7 +18,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 303px;
   height: 34px;
 
