--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 107px;
   height: 40px;
   line-height: 40px;
