--- a/src/components/radio-buttons/__item/radio-buttons__item.scss
+++ b/src/components/radio-buttons/__item/radio-buttons__item.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   width: 104px;
   height: 24px;
   font-weight: 400;
