--- a/src/components/range/range.scss
+++ b/src/components/range/range.scss
@@ -25,7 +25,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: 1 0 nowrap;
+  flex-wrap: nowrap;
   position: relative;
   width: 100%;
   height: auto;
